feat(logistics): move shopping lists to trash
