# src/FreizeitCockpit.Web/openapi/FreizeitCockpit.Web.json
@@ -3245,6 +3245,47 @@
         }
       }
     },
+    "/api/v1/organizations/{organizationId}/camps/{campId}/logistics/shopping-lists/{listId}/restore": {
+      "post": {
+        "tags": [
+          "LogisticsEndpoints"
+        ],
+        "parameters": [
+          {
+            "name": "organizationId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          },
+          {
+            "name": "campId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          },
+          {
+            "name": "listId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/api/v1/organizations/{organizationId}/camps/{campId}/logistics/shopping-lists/{listId}/items": {
       "post": {
         "tags": [
